[package]
name = "persistent"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
